# DELILA2

./: .gitignore  .gitmodules  AMax_test.conf  AMax_test_debug.conf  CLAUDE.md  CMakeLists.txt  DESIGN.md  MANUAL_JP.md  MinimalEventData_Feature_Summary.md  PSD2.conf  README.md  REPOSITORY_MERGE_PLAN.md  REQUIREMENTS.md  ToDo.md  test_amax_basic  test_amax_basic.cpp  test_amax_hw  test_amax_hw.cpp
PreSearch/net/: .gitignore  CMakeLists.txt  DESIGN.md  README.md  REQUIREMENTS.md  TODO.md  build.sh  comprehensive_analysis  comprehensive_analysis.cpp  generate_max_throughput_report.cpp  generate_performance_comparison  generate_performance_comparison.cpp  max_throughput_analysis_report.html  performance_comparison_report.html  test_basic_functionality.cpp  test_config.cpp  test_html_report  test_html_report.cpp  test_performance_report.html
PreSearch/net/config/: config.json  config.json.example  max_throughput_test.json  performance_test.json  quick_test.json  test_config.json
PreSearch/net/include/: Common.hpp  Config.hpp  EventDataBatch.hpp  EventGenerator.hpp  GrpcTransport.hpp  HtmlReportGenerator.hpp  ITransport.hpp  Logger.hpp  MemoryMonitor.hpp  SequenceValidator.hpp  StatsCollector.hpp  ZmqTransport.hpp
PreSearch/net/proto/: messages.proto
PreSearch/net/scripts/: check_deps.sh  kill_all.sh  run_comprehensive_test.sh  run_test.sh
PreSearch/net/src/: Common.cpp  ConfigLoader.cpp  DataHub.cpp  DataReceiver.cpp  DataSender.cpp  EventDataBatch.cpp  EventGenerator.cpp  GrpcTransport.cpp  HtmlReportGenerator.cpp  Logger.cpp  MemoryMonitor.cpp  SequenceValidator.cpp  StatsCollector.cpp  TransportFactory.cpp  ZmqTransport.cpp
daq_test/: CMakeLists.txt  DEMO.md  PSD2.conf  README_source_sink.md  emulator.cpp  main.cpp  monitor.cpp  recorder.cpp  sink.cpp  source.cpp  test_batch_scaling.sh  test_emulator.sh  test_pubsub.sh  test_source_sink.sh
docs/: CMakeLists.txt  Doxyfile  MinimalEventData_API.md  README.md  USER_GUIDE.md
docs/diagrams/: data_flow.puml  digitizer_class_hierarchy.puml  network_architecture.puml  system_overview.puml
docs/requirements/: component_requirements.md
examples/: CMakeLists.txt  DIGITIZER2_EXAMPLE.md  README.md  basic_example.cpp  data_command_example.cpp  digitizer2_basic_example.cpp  emulator_main.cpp  merger_main.cpp  minimal_event_data_example.cpp  monitor_main.cpp  separated_serialization.cpp  simple_digitizer_test.cpp  start_pipeline.sh  stop_pipeline.sh  writer_main.cpp
lib/component/: CMakeLists.txt
lib/component/include/: CLIOperator.hpp  DigitizerSource.hpp  Emulator.hpp  FileWriter.hpp  MonitorROOT.hpp  SimpleMerger.hpp  TimeSortMerger.hpp
lib/component/src/: CLIOperator.cpp  DigitizerSource.cpp  Emulator.cpp  FileWriter.cpp  MonitorROOT.cpp  SimpleMerger.cpp  TimeSortMerger.cpp
lib/core/: CMakeLists.txt
lib/digitizer/: AMax.conf  CMakeLists.txt  dig1.conf
lib/digitizer/include/: AMaxConstants.hpp  AMaxDecoder.hpp  Digitizer.hpp  Digitizer1.hpp  Digitizer2.hpp  IDecoder.hpp  IDigitizer.hpp  PHA1Decoder.hpp  PSD1Decoder.hpp  PSD2Decoder.hpp  ParameterValidator.hpp
lib/digitizer/src/: AMaxDecoder.cpp  ConfigurationManager.cpp  Digitizer.cpp  Digitizer1.cpp  Digitizer2.cpp  DigitizerFactory.cpp  ParameterValidator.cpp
lib/digitizer/tests/: test_amax_firmware.cpp
lib/monitor/: CMakeLists.txt
lib/monitor/include/: Monitor.hpp  Recorder.hpp
lib/monitor/src/: Monitor.cpp  Recorder.cpp
lib/monitor/tests/: CMakeLists.txt  build_and_test.sh  test_recorder.cpp
lib/net/: CMakeLists-original.txt  CMakeLists.txt  DESIGN-binary.md  DESIGN.md  HARDCODING_FIXES.md  INTEGRATION_TEST_GUIDE.md  MANUAL.md  NETWORKING_REQUIREMENTS.md  PHASE1_COMPLETION_REPORT.md  PLAN-binary.md  PLAN-phase2-messaging.md  README.md  README_JP.md  REQUIREMENTS-binary.md  REQUIREMENTS.md  debug_magic  debug_magic.cpp  debug_struct_size  debug_struct_size.cpp  delila_net.pc.in  test_phase3  test_serializer.cpp  test_zmq_transport.cpp
lib/net/config/: config_schema.json  default_config.json  environment_variables.md
lib/net/examples/: CMakeLists.txt  README.md  broadcast_vs_loadbalance.cpp  build.sh  command_client.cpp  command_server.cpp  config_example.cpp  example_config.json  filtered_broadcast.cpp  memory_pool_example.cpp  minimal_command_test  minimal_command_test.cpp  one_to_many_demo.cpp  performance_test.cpp  pubsub_publisher.cpp  pubsub_subscriber.cpp  push_pull_puller.cpp  push_pull_pusher.cpp  receiver.cpp  robust_client.cpp  sender.cpp  simple_test.cpp  status_monitor.cpp  status_reporter.cpp  status_reporter_simple.cpp  test_command.cpp  test_status  test_status.cpp  throughput_test.cpp
lib/net/include/: ComponentState.hpp  DataProcessor.hpp  EOSTracker.hpp  EventData.hpp  HeartbeatManager.hpp  HeartbeatMonitor.hpp  MessageType.hpp  SequenceGapDetector.hpp  Serializer.hpp  TwoPhaseStartManager.hpp  ZMQTransport.hpp
lib/net/proto/: control_messages.proto
lib/net/src/: DataProcessor.cpp  EventData.cpp  SequenceGapDetector.cpp  Serializer.cpp  ZMQTransport.cpp  ZMQTransport_old.cpp
lib/net/tests/: CMakeLists.txt
tests/: CMakeLists.txt
tests/benchmarks/: bench_dataprocessor_performance.cpp  bench_minimal_vs_eventdata.cpp  bench_old_vs_new_api.cpp  bench_serialization_formats.cpp  bench_serializer_baseline.cpp  bench_zmq_transport_minimal.cpp
tests/integration/: test_api_interoperability.cpp  test_byte_transport_reliability.cpp  test_format_version_compatibility.cpp  test_minimal_data_transport.cpp  test_multi_source_merger_pipeline.cpp  test_operator_component_integration.cpp  test_sequence_gap_integration.cpp  test_source_writer_pipeline.cpp  test_two_phase_start_integration.cpp  test_utils.hpp
tests/unit/component/: test_cli_operator.cpp  test_digitizer_source.cpp  test_emulator.cpp  test_file_writer.cpp  test_monitor_root.cpp  test_simple_merger.cpp  test_time_sort_merger.cpp
tests/unit/core/: test_component_config.cpp  test_idatacomponent.cpp  test_ioperator.cpp  test_minimal_event_data.cpp  test_operator_config.cpp
tests/unit/net/: test_component_state.cpp  test_data_processor.cpp  test_eos_tracker.cpp  (+11 more)
(+81 files in other folders)
